operator/pkg/model/ingestion/testdata/gateway/http_route_ordering/input-service.yaml
- metadata:
    name: backend
    namespace: default
  spec:
    ports:
    - port: 8080
- metadata:
    name: backend
    namespace: other
  spec:
    ports:
    - port: 8080
